Fix error in nginx conf

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -19,10 +19,11 @@ server {
     # ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
     # Your domain names here
-    server_name _;
+    server_name localhost;
 
-    #website root location
+    # website root location
     root /var/www/webroot/ROOT;
+    index index.html index.htm index.php;
 
     # Your admin folder
     set $admin_dir /admin;
