Use ps-admin for admin name

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -28,7 +28,7 @@ server {
 
   # Symfony controllers
     location ~ /(international|_profiler|module|product|combination|specific-price)/(.*)$ {
-      	try_files $uri $uri/ /index.php?q=$uri&$args /p-admin/index.php$is_args$args;
+      	try_files $uri $uri/ /index.php?q=$uri&$args /ps-admin/index.php$is_args$args;
     }
 
   location / {
